--- a/package.json
+++ b/package.json
@@ -2,14 +2,23 @@
   "name": "ld-json-codegen",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "type": "module",
+  "source": "src/index.html",
+
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@codemirror/lang-json": "^6.0.1",
+    "codemirror": "^6.0.1",
+    "highlight.js": "^11.8.0",
     "underscore.string": "^3.3.6"
+  },
+  "devDependencies": {
+    "parcel": "^2.9.3",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10"
   }
 }
