--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,7 +8,14 @@ jobs:
     permissions:
       deployments: write
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v3
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16.x'
+      - name: Build site 
+        run: |
+          npm install && npm run build
       - uses: chrnorm/deployment-action@v2
         name: Create GitHub deployment
         id: deployment
