--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       deployments: write
+      pull-requests: read
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js
@@ -27,6 +28,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN}}
           description: 'Publish preview'
           environment: development
+          transient-environment: true
           environment-url: https://ldcontext.arq.sh/dev/pr-${{ github.event.pull_request.number }}/index.html
       - name: Set up S3cmd cli tool
         uses: s3-actions/s3cmd@v1.5.0
