--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,5 +1,6 @@
 name: Publish PR preview
 on: 
+    workflow_dispatch:
     pull_request:
         types: [opened, synchronize, reopened]
         paths:
