--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -12,7 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       deployments: write
-      pull-requests: read
+      pull-requests: write
+      statuses: write
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js
