--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -34,5 +34,6 @@ jobs:
         run: |
           ls -lia ~
           pwd
+          cat ~/.s3cfg
           s3cmd sync --recursive --acl-public dist s3://ldcontext.arq.sh/dev/pr-${{ github.event.pull_request.number }}
           s3cmd info s3://ldcontext.arq.sh
