--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -33,7 +33,7 @@ jobs:
         run: |
           ls -liah ~/.s3cfg
           cat ~/.s3cfg
-          s3cmd sync -d -c ~/.s3cfg --recursive --acl-public dist/ s3://ldcontext.arq.sh/dev/prs/${{ github.event.pull_request.number }}/
+          s3cmd sync -d -c ~/.s3cfg -M --recursive --acl-public dist/ s3://ldcontext.arq.sh/dev/prs/${{ github.event.pull_request.number }}/
       - uses: chrnorm/deployment-action@v2
         name: Create GitHub deployment
         id: deployment
