formatting, add multi-context renderer

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -42,7 +42,7 @@ jobs:
         run: |
           ls -liah ~/.s3cfg
           cat ~/.s3cfg
-          s3cmd sync -d -c ~/.s3cfg -M --recursive --acl-public dist/ s3://ldcontext.arq.sh/dev/prs/${{ github.event.pull_request.number }}/
+          s3cmd sync -c ~/.s3cfg --guess-mime-type --no-mime-magic --recursive --acl-public dist/ s3://ldcontext.arq.sh/dev/prs/${{ github.event.pull_request.number }}/
       - name: Update deployment status (success)
         if: success()
         uses: chrnorm/deployment-status@v2
